RESOLVED FIXED199840
REGRESSION: fast/events/watchos/double-tap-to-zoom* tests crashing in com.apple.WebKit: -[WKContentView(WKInteraction) _singleTapDidReset:]
https://bugs.webkit.org/show_bug.cgi?id=199840
Summary REGRESSION: fast/events/watchos/double-tap-to-zoom* tests crashing in com.app...
Antoine Quint
Reported 2019-07-16 16:03:42 PDT
REGRESSION: fast/events/watchos/double-tap-to-zoom* tests crashing in com.apple.WebKit: -[WKContentView(WKInteraction) _singleTapDidReset:]
Attachments
Patch (19.42 KB, patch)
2019-07-16 16:07 PDT, Antoine Quint
no flags
Patch for landing (18.64 KB, patch)
2019-07-16 16:24 PDT, Antoine Quint
no flags
Patch for landing (16.97 KB, patch)
2019-07-16 16:33 PDT, Antoine Quint
no flags
Antoine Quint
Comment 1 2019-07-16 16:07:22 PDT
Antoine Quint
Comment 2 2019-07-16 16:07:27 PDT
Wenson Hsieh
Comment 3 2019-07-16 16:13:33 PDT
Comment on attachment 374254 [details] Patch Looks find to me. Is there a reason to prefer this over making _lastActiveTouchIdentifier an ivar of type RetainPtr<NSNumber>, and then exposing a getter that returns _lastActiveTouchIdentifier.get()? I think this is how most of our ObjC properties in WebKit are implemented.
Wenson Hsieh
Comment 4 2019-07-16 16:14:51 PDT
(In reply to Wenson Hsieh from comment #3) > Comment on attachment 374254 [details] > Patch > > Looks find to me. Is… s/find/fine/
Antoine Quint
Comment 5 2019-07-16 16:24:00 PDT
Created attachment 374258 [details] Patch for landing
Antoine Quint
Comment 6 2019-07-16 16:24:49 PDT
(In reply to Wenson Hsieh from comment #3) > Comment on attachment 374254 [details] > Patch > > Looks find to me. Is there a reason to prefer this over making > _lastActiveTouchIdentifier an ivar of type RetainPtr<NSNumber>, and then > exposing a getter that returns _lastActiveTouchIdentifier.get()? I think > this is how most of our ObjC properties in WebKit are implemented. No reason, I just wasn't aware. Thanks for bringing this up, I think I did what you suggested in the patch for landing. Let me know if it isn't quite right.
Antoine Quint
Comment 7 2019-07-16 16:33:01 PDT
Created attachment 374259 [details] Patch for landing
WebKit Commit Bot
Comment 8 2019-07-16 19:46:15 PDT
Comment on attachment 374259 [details] Patch for landing Clearing flags on attachment: 374259 Committed r247502: <https://trac.webkit.org/changeset/247502>
WebKit Commit Bot
Comment 9 2019-07-16 19:46:16 PDT
All reviewed patches have been landed. Closing bug.
Wenson Hsieh
Comment 10 2019-07-18 11:00:50 PDT
*** Bug 199911 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.